<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">
    <item android:title="Options">
        <menu>
            <item
                android:title="Sort Alphabetically"
                android:id="@+id/nav_sort_switch"
                app:actionLayout="@layout/nav_switch"
                android:icon="@drawable/ic_sort_by_alpha_black_24dp"/>
        </menu>
    </item>
    <item android:title="Rating filter"
        android:id="@+id/nav_rating_filer">
        <menu>
            <item
                android:title="1 stars"
                android:id="@+id/filter_star_one"
                android:icon="@drawable/ic_star_black_24dp"
                app:actionLayout="@layout/nav_checkbox" />
            <item
                android:title="2 stars"
                android:id="@+id/filter_star_two"
                android:icon="@drawable/ic_star_black_24dp"
                app:actionLayout="@layout/nav_checkbox" />
            <item
                android:title="3 stars"
                android:id="@+id/filter_star_three"
                android:icon="@drawable/ic_star_black_24dp"
                app:actionLayout="@layout/nav_checkbox" />
            <item
                android:title="4 stars"
                android:id="@+id/filter_star_four"
                android:icon="@drawable/ic_star_black_24dp"
                app:actionLayout="@layout/nav_checkbox" />
            <item
                android:title="5 stars"
                android:id="@+id/filter_star_five"
                android:icon="@drawable/ic_star_black_24dp"
                app:actionLayout="@layout/nav_checkbox" />
        </menu>
    </item>
    <item
        android:title=""
        app:actionLayout="@layout/nav_textview" />
</menu>
